{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 748,
  "lineage": "a4cac658-d2e2-a7cb-ee70-45895e2cb219",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:network-acl/acl-07dfbebbd2e42712d",
            "default_network_acl_id": "acl-07dfbebbd2e42712d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07dfbebbd2e42712d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "515966518121",
            "subnet_ids": [
              "subnet-01f981bf73a30dbf0",
              "subnet-0273240fa5919e4df",
              "subnet-03d9fcdaf812f5959",
              "subnet-0b40f5efbe207ee10",
              "subnet-0f695a0bcf5150c6c",
              "subnet-0f9b2f05af68d1596"
            ],
            "tags": {
              "Name": "eks-rdg-default",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-default",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "vpc_id": "vpc-03ba2a827a3eaa366"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:route-table/rtb-0aa7e072b842d42c9",
            "default_route_table_id": "rtb-0aa7e072b842d42c9",
            "id": "rtb-0aa7e072b842d42c9",
            "owner_id": "515966518121",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "eks-rdg-default",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-default",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03ba2a827a3eaa366"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:security-group/sg-0b9b045bd6c9968ed",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b9b045bd6c9968ed",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "515966518121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-rdg-default",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-default",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "vpc_id": "vpc-03ba2a827a3eaa366"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a2bdcafef1d46ae",
            "arn": "arn:aws:ec2:us-east-1:515966518121:elastic-ip/eipalloc-05a2bdcafef1d46ae",
            "domain": "vpc",
            "id": "eipalloc-05a2bdcafef1d46ae",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-224-36-65.compute-1.amazonaws.com",
            "public_ip": "34.224.36.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-rdg-us-east-1a",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-us-east-1a",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:internet-gateway/igw-087598fbf2b30201c",
            "id": "igw-087598fbf2b30201c",
            "owner_id": "515966518121",
            "tags": {
              "Name": "eks-rdg",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "vpc_id": "vpc-03ba2a827a3eaa366"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a2bdcafef1d46ae",
            "association_id": "eipassoc-09c0611b713688e61",
            "connectivity_type": "public",
            "id": "nat-090bf77bb4c6ee7fa",
            "network_interface_id": "eni-03ea4b8d07fc671e5",
            "private_ip": "10.101.28.71",
            "public_ip": "34.224.36.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f9b2f05af68d1596",
            "tags": {
              "Name": "eks-rdg-us-east-1a",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-us-east-1a",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c164c378ac3da47e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-090bf77bb4c6ee7fa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c164c378ac3da47e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-087598fbf2b30201c",
            "id": "r-rtb-0c14cd16932f9b1891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c14cd16932f9b189",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:route-table/rtb-0c164c378ac3da47e",
            "id": "rtb-0c164c378ac3da47e",
            "owner_id": "515966518121",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-rdg-privada",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-privada",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ba2a827a3eaa366"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:route-table/rtb-0c14cd16932f9b189",
            "id": "rtb-0c14cd16932f9b189",
            "owner_id": "515966518121",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-rdg-publica",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-publica",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ba2a827a3eaa366"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f4dd8e85c665510",
            "route_table_id": "rtb-0c164c378ac3da47e",
            "subnet_id": "subnet-0b40f5efbe207ee10"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b48ca08095c8808",
            "route_table_id": "rtb-0c164c378ac3da47e",
            "subnet_id": "subnet-0f695a0bcf5150c6c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba7e0c8b76702bf9",
            "route_table_id": "rtb-0c164c378ac3da47e",
            "subnet_id": "subnet-03d9fcdaf812f5959"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbce7b84a9c39188",
            "route_table_id": "rtb-0c14cd16932f9b189",
            "subnet_id": "subnet-0f9b2f05af68d1596"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fbea625b6baf7b5",
            "route_table_id": "rtb-0c14cd16932f9b189",
            "subnet_id": "subnet-01f981bf73a30dbf0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9d8492a2160a771",
            "route_table_id": "rtb-0c14cd16932f9b189",
            "subnet_id": "subnet-0273240fa5919e4df"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:subnet/subnet-0b40f5efbe207ee10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.101.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b40f5efbe207ee10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966518121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-rdg-privada-us-east-1a",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg",
              "karpenter.sh/discovery": "eks-rdg",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-privada-us-east-1a",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg",
              "karpenter.sh/discovery": "eks-rdg",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03ba2a827a3eaa366"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:subnet/subnet-0f695a0bcf5150c6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.101.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f695a0bcf5150c6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966518121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-rdg-privada-us-east-1b",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg",
              "karpenter.sh/discovery": "eks-rdg",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-privada-us-east-1b",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg",
              "karpenter.sh/discovery": "eks-rdg",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03ba2a827a3eaa366"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:subnet/subnet-03d9fcdaf812f5959",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.101.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d9fcdaf812f5959",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966518121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-rdg-privada-us-east-1c",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg",
              "karpenter.sh/discovery": "eks-rdg",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-privada-us-east-1c",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg",
              "karpenter.sh/discovery": "eks-rdg",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03ba2a827a3eaa366"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:subnet/subnet-0f9b2f05af68d1596",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.101.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9b2f05af68d1596",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966518121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-rdg-publica-us-east-1a",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-publica-us-east-1a",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ba2a827a3eaa366"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:subnet/subnet-01f981bf73a30dbf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.101.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f981bf73a30dbf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966518121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-rdg-publica-us-east-1b",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-publica-us-east-1b",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ba2a827a3eaa366"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:subnet/subnet-0273240fa5919e4df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.101.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0273240fa5919e4df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966518121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-rdg-publica-us-east-1c",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg-publica-us-east-1c",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ba2a827a3eaa366"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966518121:vpc/vpc-03ba2a827a3eaa366",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.101.0.0/16",
            "default_network_acl_id": "acl-07dfbebbd2e42712d",
            "default_route_table_id": "rtb-0aa7e072b842d42c9",
            "default_security_group_id": "sg-0b9b045bd6c9968ed",
            "dhcp_options_id": "dopt-00e39ace509aeee43",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ba2a827a3eaa366",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa7e072b842d42c9",
            "owner_id": "515966518121",
            "tags": {
              "Name": "eks-rdg",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "eks-rdg",
              "created-by": "eks-rdg-labs",
              "env": "eks-rdg"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}